        executables.
    - New `What Next' help.  Gives a hint on what to do next,
      depending on current state.  Useful for beginners.
    - User-defined DDD commands.  DDD now provides a simple facility
      that allows the inferior debugger to execute DDD commands.  For
      details, see `User-Defined Commands' in the DDD manual.
    - For `Continue until here', DDD now uses explicit temporary
      breakpoints and `continue' instead of the GDB `until' command.
    - Improved display of breakpoints and execution positions:
      + The current execution position is now properly cleared if
        undetermined (no source, program terminated, etc.)
      + If the program stopped due to a signal, this is indicated
        by a lightning symbol within the current execution glyph.
      + Faster scrolling.  While scrolling source or machine code at
        high speed, glyphs are now unmapped.  Slow scrolling still works.

    Bug fixes:
    - Various fixes for XDB on HP-UX 10.x included.  Thanks to Robert
      Wiegand <wiegand@kong.gsfc.nasa.gov>.
    - Again, several dozens of minor improvements and bug fixes.


DDD 2.1.1
---------

    DDD 2.1.1 includes some hacks that make DDD run with LessTif, a
    free Motif clone, without loss of functionality.  DDD now no more
    depends on proprietary software like OSF/Motif.

    Apart from these hacks, functionality is unchanged with respect to
    DDD 2.1 (no new features, no bug fixes).  If you have DDD 2.1 up
    and running, there is no need to upgrade to DDD 2.1.1.

    As of this release, DDD is included in GNU CD-ROMs by the Free
    Software Foundation (aka the GNU people).  DDD distributions are
    now numbered according to the GNU Maintenance Instructions.



DDD 2.1
-------

    DDD 2.1 brings alias detection, local variable displays, button
    and value tips as well as several new features and bug fixes.

    User-visible changes to DDD 2.0: