@@ -182,18 +182,6 @@ Volunteers for fixing these and other bugs are welcome!
      If I resize the data display the background doesn't get
      refreshed.  [Use an Athena Panner instead of Motif scrollbars  -AZ]
 
-114. Avi Cohen Stuart <avi@baan.nl> noticed that "a lot of texts on
-     several windows are redisplayed more that two times, for example
-     texts in the source window, and the graphics window.  Is the
-     frequent redisplay a 'feature' or is it something that needs to
-     be fixed? 
-     [It's a cosmetic bug, which will be fixed someday.  -AZ]
-
-     N.B. for Motif1.2 there exists something like
-     XmText{Disable|Enable}Display (or something like this...) that
-     allows to do updates without immediate redisplay."  [You won't
-     believe it, but the DDD developers still use Motif 1.1.  -AZ]
-
 117. Under Linux slackware 3.1, the file permissions in `/dev/ptyp?'
      do not allow for DDD <-> GDB interaction.  [Can we circumvent
      this within DDD?  -AZ]
